--- a/src/fragments/header/header.css
+++ b/src/fragments/header/header.css
@@ -1,1 +1,13 @@
 @import url('https://cdn-uicons.flaticon.com/2.2.0/uicons-regular-rounded/css/uicons-regular-rounded.css');
+@import url('https://cdn-uicons.flaticon.com/2.2.0/uicons-regular-straight/css/uicons-regular-straight.css');
+.search {
+    width: 500px !important;
+}
+.header-item-style{
+    text-decoration: none;
+    color:rgba(0,0,0,.9)
+}
+
+.soil-logo {
+    color:#009F7F !important;
+}
