added number of items in cart,changing button text when added successfully, and images

--- a/src/components/product.css
+++ b/src/components/product.css
@@ -33,6 +33,7 @@
 
 .addCart.disabled {
     background-color: black;
+    cursor:not-allowed;
 }
 .addCart.disabled:hover{
     background-color: black;
