--- a/src/fragments/header/header.css
+++ b/src/fragments/header/header.css
@@ -21,3 +21,16 @@
 .header-nav{
     background-color: #009F7F !important;
 }
+.items-cart {
+    background-color: rgb(255, 29, 29);
+    color:white;
+    font-size:12px;
+    color: #fff;
+    border-radius:50%;
+    padding: 0px 5px;
+    position:relative;
+    left:-45px;
+    top:-15px;
+    
+    opacity:0.9;
+}
